# API-Performance-Optimization-L.0.8

./: .env.example  .function_call_history  .gitignore  .task_tracker.json  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-scripts.sh  main.py  pyproject.toml  requirements.txt  serverless.yml  stdout.txt  test_lambda.py  test_lambda_environment.py  test_lambda_invocation.py
.knowledge/: .knowledge.json  _home_kavia_workspace_API-Performance-Optimization-L.0.8_.github_workflows_cd.yml  _home_kavia_workspace_API-Performance-Optimization-L.0.8_.github_workflows_ci.yml  _home_kavia_workspace_API-Performance-Optimization-L.0.8_README.md  _home_kavia_workspace_API-Performance-Optimization-L.0.8___init__.py  _home_kavia_workspace_API-Performance-Optimization-L.0.8_app___init__.py  _home_kavia_workspace_API-Performance-Optimization-L.0.8_app_api___init__.py  _home_kavia_workspace_API-Performance-Optimization-L.0.8_app_api_deps.py  _home_kavia_workspace_API-Performance-Optimization-L.0.8_app_api_v1___init__.py  _home_kavia_workspace_API-Performance-Optimization-L.0.8_app_api_v1_api.py  _home_kavia_workspace_API-Performance-Optimization-L.0.8_app_api_v1_endpoints___init__.py  _home_kavia_workspace_API-Performance-Optimization-L.0.8_app_api_v1_endpoints_example_url.py  _home_kavia_workspace_API-Performance-Optimization-L.0.8_app_api_v1_endpoints_orders.py  _home_kavia_workspace_API-Performance-Optimization-L.0.8_app_api_v1_endpoints_products.py  _home_kavia_workspace_API-Performance-Optimization-L.0.8_app_core___init__.py  _home_kavia_workspace_API-Performance-Optimization-L.0.8_app_core_cache.py  _home_kavia_workspace_API-Performance-Optimization-L.0.8_app_core_config.py  _home_kavia_workspace_API-Performance-Optimization-L.0.8_app_core_rate_limit.py  _home_kavia_workspace_API-Performance-Optimization-L.0.8_app_crud___init__.py  (+37 more)
app/: __init__.py  main.py
docs/: url_generation.md
(+39 files in other folders)
